err/cafe-plugin-subunit.err
Listing '.'...
Listing './bin'...
Compiling './bin/dill_unpickle.py'...
Compiling './bin/get_objgraph.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/cafe'...
Listing './lib/python3.5/site-packages/cafe/common'...
Listing './lib/python3.5/site-packages/cafe/common/reporting'...
Listing './lib/python3.5/site-packages/cafe/configurator'...
Listing './lib/python3.5/site-packages/cafe/drivers'...
Listing './lib/python3.5/site-packages/cafe/drivers/behave'...
Listing './lib/python3.5/site-packages/cafe/drivers/lettuce'...
Listing './lib/python3.5/site-packages/cafe/drivers/pyvows'...
Listing './lib/python3.5/site-packages/cafe/drivers/specter'...
Listing './lib/python3.5/site-packages/cafe/drivers/unittest'...
Listing './lib/python3.5/site-packages/cafe/engine'...
Listing './lib/python3.5/site-packages/cafe/engine/clients'...
Listing './lib/python3.5/site-packages/cafe/engine/models'...
Listing './lib/python3.5/site-packages/cafe_plugin_subunit-0.0.3.dist-info'...
Listing './lib/python3.5/site-packages/decafe-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/dill'...
Listing './lib/python3.5/site-packages/dill-0.2.7.1.egg-info'...
Listing './lib/python3.5/site-packages/extras'...
Listing './lib/python3.5/site-packages/extras/tests'...
Listing './lib/python3.5/site-packages/extras-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/fixtures'...
Listing './lib/python3.5/site-packages/fixtures/_fixtures'...
Listing './lib/python3.5/site-packages/fixtures/tests'...
Listing './lib/python3.5/site-packages/fixtures/tests/_fixtures'...
Listing './lib/python3.5/site-packages/fixtures-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/linecache2'...
Listing './lib/python3.5/site-packages/linecache2/tests'...
Listing './lib/python3.5/site-packages/linecache2-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/multiprocess'...
Listing './lib/python3.5/site-packages/multiprocess/dummy'...
Listing './lib/python3.5/site-packages/multiprocess-0.70.5.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_mimeparse-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/python_subunit-1.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/subunit'...
Listing './lib/python3.5/site-packages/subunit/tests'...
Listing './lib/python3.5/site-packages/testtools'...
Compiling './lib/python3.5/site-packages/testtools/_compat2x.py'...
***   File "./lib/python3.5/site-packages/testtools/_compat2x.py", line 16
    raise exc_class, exc_obj, exc_tb
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/testtools/matchers'...
Listing './lib/python3.5/site-packages/testtools/testresult'...
Listing './lib/python3.5/site-packages/testtools/tests'...
Listing './lib/python3.5/site-packages/testtools/tests/matchers'...
Listing './lib/python3.5/site-packages/testtools/tests/twistedsupport'...
Listing './lib/python3.5/site-packages/testtools/twistedsupport'...
Listing './lib/python3.5/site-packages/testtools-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/traceback2'...
Listing './lib/python3.5/site-packages/traceback2/tests'...
Listing './lib/python3.5/site-packages/traceback2-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/unittest2'...
Listing './lib/python3.5/site-packages/unittest2/test'...
Listing './lib/python3.5/site-packages/unittest2-1.1.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
